# cratekeeper

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/agents/: architecture.agent.md  backend.agent.md  frontend.agent.md  qa.agent.md  requirements.agent.md
.github/instructions/: backend.instructions.md  frontend.instructions.md
backend/: pyproject.toml
backend/alembic/versions/: 0002_tagged_at.py
backend/cratekeeper/: spotify_client.py  tidal_client.py
backend/cratekeeper_api/: orm.py  pipeline.py  schemas.py
backend/cratekeeper_api/integrations/: spotify.py
backend/cratekeeper_api/jobs/handlers/: apply_tags.py  undo_tags.py
backend/cratekeeper_api/routers/: events.py  settings.py
backend/cratekeeper_api/services/: event_aggregation.py
backend/tests/: test_events_aggregation.py  test_pipeline_order.py
cratekeeper-api/: Dockerfile  README.md
cratekeeper-api/cratekeeper_api/: orm.py
cratekeeper-cli/: pyproject.toml
cratekeeper-cli/cratekeeper/: cli.py  event_builder.py  llm_classifier.py  mood_analyzer.py  tag_writer.py  tidal_client.py
cratekeeper-web/src/: Settings.tsx
dj-cli/: Dockerfile  pyproject.toml
dj-cli/dj_cli/: classifier.py  cli.py  genre_buckets.py  library_builder.py  local_scanner.py  matcher.py  models.py  mood_analyzer.py  musicbrainz_client.py  spotify_client.py  tidal_client.py
frontend/: .env.example  README.md  index.html  package.json
frontend-plan/: README.md  product-overview.md
frontend/src/: App.tsx  (+2 more)
plans/: local-files.md
project/: ARCHITECTURE.md  PRD.md
(+68 files in other folders)
